@@ -14,6 +14,7 @@ This file lists the incompatible changes between Version 2.x and older versions
   - prototype of FlxX_shift has changed
   - renamed FpX_fromdigits -> FpXV_FpX_fromdigits
   - renamed FpXQX_fromdigits -> FpXQXV_FpXQX_fromdigits
+  - rename vecbinome -> vecbinomial
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.8 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
