@@ -581,7 +581,7 @@ Behaviour at endpoint for Double Exponential (DE) methods: either a scalar
 
 \subsec{Combinatorics}
 \li{factorial of $x$}{$x$!~{\rm or} factorial$(x)$}
-\li{binomial coefficient $x\choose y$}{binomial$(x,y)$}
+\li{binomial coefficient $x\choose k$}{binomial$(x,\{k\})$}
 \li{Bernoulli number $B_n$ as real/rational}{bernreal$(n)${\rm, }bernfrac}
 \li{Bernoulli polynomial $B_n(x)$}{bernpol$(n,\{x\})$}
 \li{$n$-th Fibonacci number}{fibonacci$(n)$}
