@@ -2231,6 +2231,7 @@ GEN     ZV_sort(GEN L);
 GEN     ZV_sort_uniq(GEN L);
 GEN     ZV_union_shallow(GEN x, GEN y);
 GEN     binomial(GEN x, long k);
+GEN     binomial0(GEN x, GEN k);
 GEN     binomialuu(ulong n, ulong k);
 int     cmp_Flx(GEN x, GEN y);
 int     cmp_RgX(GEN x, GEN y);
@@ -2294,7 +2295,7 @@ GEN     stirling(long n, long m, long flag);
 GEN     stirling1(ulong n, ulong m);
 GEN     stirling2(ulong n, ulong m);
 long    tablesearch(GEN T, GEN x, int (*cmp)(GEN,GEN));
-GEN     vecbinome(long n);
+GEN     vecbinomial(long n);
 long    vecsearch(GEN v, GEN x, GEN k);
 GEN     vecsort(GEN x, GEN k);
 GEN     vecsort0(GEN x, GEN k, long flag);
